# podcraft

./: .gitignore  README.md  README_EN.md  pyproject.toml
examples/: sample.md
src/podcraft/: __init__.py  cli.py  config.py  cover.py  feed.py  manifest.py  pipeline.py  queue.py  release.py  research.py  script.py  shownotes.py  utils.py
src/podcraft/templates/: podcraft.yaml  research_en.md  research_zh.md  shownotes_en.md  shownotes_zh.md  system_en.md  system_zh.md
src/podcraft/tts/: __init__.py  audio.py  edge.py  volcano_podcast.py
tests/: conftest.py  test_audio.py  test_cli.py  test_config.py  test_cover.py  test_feed.py  test_queue.py  test_release.py  test_research.py  test_script.py  test_shownotes.py  test_utils.py
